Minor style fixes, implementing overview for images when user is logged in (compare blog overview), link from overview to adding new image, and adding a new image redirects to overview. When user is logged in, media navlink will appear in the navbar

--- a/vanilladev/vanilladev/templates/base.html
+++ b/vanilladev/vanilladev/templates/base.html
@@ -34,6 +34,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a {% if request.resolver_match.app_name == "home" %} class="active nav-link"
                             {% else %} class="nav-link" {% endif %} href="{% url 'home:index' %}">Home</a></li>
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'media:overview' %}"><strong>Media</strong></a></li>
+                    {% endif %}
                     <li class="nav-item dropdown">
                         <a {% if request.resolver_match.app_name == "projects" %} class="active nav-link dropdown-toggle" {% else %}
                             class="nav-link dropdown-toggle" {% endif %} href="#" id="navbarDropdownProjectsLink" role="button"
