Update production settings to inherit from debug and override values, small fixes in project display

--- a/vanilladev/projects/templates/projects/page.html
+++ b/vanilladev/projects/templates/projects/page.html
@@ -38,9 +38,9 @@
         </form>
     </div>
     {% endif %}
-    <h1>Rust Helper - In a Nutshell</h1>
+    <h1>{{project.title}} - In a Nutshell</h1>
     <div class="row">
-        <div class="col-12 col-lg-8">
+        <div class="col-12 col-lg-8 mb-3">
             <div>
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab"
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="col mt-5">
+        <div class="col">
             <div class="d-flex flex-column justify-content-center align-items-center h-100">
                 <h4>Technology Stack</h4>
                 <ul>
