Normalize breadcrumbs and margins

--- a/vanilladev/blog/templates/blog/overview.html
+++ b/vanilladev/blog/templates/blog/overview.html
@@ -2,14 +2,14 @@
 {% load blog_extras %}
 
 {% block content %}
-<div id="frontpage-header" class="mb-3"></div>
+<div id="frontpage-header" class="mb-4"></div>
 <div class="container">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
         <li class="breadcrumb-item"><a href="{% url 'blog:overview' %}"><span>Blog</span></a></li>
     </ol>
 </div>
-<div class="container header-container">
+<div class="container header-container mt-4">
     <h1 class="text-center">Vanilla Develop Blog</h1>
 </div>
 <div class="container">
