--- a/vanilladev/media/templates/media/change.html
+++ b/vanilladev/media/templates/media/change.html
@@ -2,7 +2,15 @@
 {% load bootstrap5 %}
 
 {% block content %}
-<div class="container header-container">
+<div id="frontpage-header" class="mb-4"></div>
+<div class="container">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'media:overview' %}"><span>Media</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'media:add' %}"><span>Add Media</span></a></li>
+    </ol>
+</div>
+<div class="container header-container mt-4">
     <h1 class="text-center">Add/Edit File</h1>
 </div>
 <div class="container">
