--- a/vanilladev/media/templates/media/overview.html
+++ b/vanilladev/media/templates/media/overview.html
@@ -5,8 +5,8 @@
     <div id="frontpage-header" class="mb-4"></div>
     <div class="container">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><span>Home</span></a></li>
-            <li class="breadcrumb-item"><a href="#"><span>Media</span></a></li>
+            <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+            <li class="breadcrumb-item"><a href="{% url 'media:overview' %}"><span>Media</span></a></li>
         </ol>
     </div>
     <div class="container header-container mt-4">
