--- a/vanilladev/blog/templates/blog/categories.html
+++ b/vanilladev/blog/templates/blog/categories.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container header-container mt-5">
+<div id="frontpage-header" class="mb-4"></div>
+<div class="container">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'blog:overview' %}"><span>Blog</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'blog:categories' %}"><span>Categories</span></a></li>
+    </ol>
+</div>
+<div class="container header-container mt-4">
     <h1 class="text-center">Category Management</h1>
 </div>
 <div class="container">
