--- a/vanilladev/projects/templates/projects/change.html
+++ b/vanilladev/projects/templates/projects/change.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container header-container">
+<div id="frontpage-header" class="mb-4"></div>
+<div class="container">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'home:index' %}"><span>Home</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'projects:overview' %}"><span>Projects</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'projects:add' %}"><span>Add Project</span></a></li>
+    </ol>
+</div>
+<div class="container header-container mt-4">
     <h1 class="text-center">Add/Edit Project</h1>
 </div>
 <div class="container">
