--- a/vanilladev/blog/templates/blog/overview.html
+++ b/vanilladev/blog/templates/blog/overview.html
@@ -30,6 +30,7 @@
     </nav>
     {% if request.user.is_authenticated %}
     <a href="{% url 'blog:add' %}"><button class="btn btn-success mb-3">Add new post</button></a>
+    <a href="{% url 'blog:categories' %}"><button class="btn btn-primary mb-3">Manage Categories</button></a>
     {% endif %}
     <div class="row mb-3">
         {% for post in posts %}
