--- a/vanilladev/blog/templates/blog/categories.html
+++ b/vanilladev/blog/templates/blog/categories.html
@@ -14,8 +14,8 @@
 </div>
 <div class="container">
     <p>On this page, you may change the name of existing categories, delete them, or add new ones. These categories will
-        be displayed when creating blog posts. Keep in mind that a category cannot be deleted if it is used in any
-        existing blog post.</p>
+        be displayed when creating blog posts. <strong>Keep in mind that a category cannot be deleted if it is used in any
+        existing blog post.</strong></p>
     <form id="UpdateCategoriesForm" method="POST">
         {{ formset.non_form_errors.as_ul }}
         {{ formset.management_form }}
@@ -24,6 +24,7 @@
             <thead class="table-dark">
                 <tr>
                     <th>Name</th>
+                    <th style="width:50px;" class="text-center">Posts</th>
                     <th style="width:20px;">Delete</th>
                 </tr>
             </thead>
@@ -38,8 +39,13 @@
                         {{form.name}}
                     </td>
                     <td class="text-center">
+                        {{form.blogcount}}
+                    </td>
+                    <td class="text-center">
                         {{form.DELETE.errors.as_ul}}
+                        {% if form.blogcount == 0 %}
                         {{form.DELETE}}
+                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
