--- a/vanilladev/articles/templates/articles/article.html
+++ b/vanilladev/articles/templates/articles/article.html
@@ -9,72 +9,92 @@
         {% else %}
         <li class="breadcrumb-item"><span>Articles</span></li>
         {% endif %}
-        <li class="breadcrumb-item"><a href="{% url 'articles:page' article.id %}"><span>{{article.title}}</span></a></li>
+        <li class="breadcrumb-item"><a href="{% url 'articles:page' article.id %}"><span>{{article.title}}</span></a>
+        </li>
     </ol>
 </div>
 <div class="container header-container mt-4">
-    <h1 class="text-center">MTX Perception - Aion Classic<br></h1>
+    <h1 class="text-center">{{article.title}}</h1>
+    {% if not article.is_published %}
+    <p class="text-center"><span class="badge bg-danger">Draft</span></p>
+    {% endif %}
     <p class="text-center">Article</p>
-    <div class="d-flex flex-row justify-content-between"><a class="navlink" href="#">&lt; Next
-            Article</a><span>06.07.2021</span><a class="text-end navlink" href="#">Previous Article &gt;</a></div>
+    <div class="d-flex flex-row justify-content-between">
+        {% if next %}
+        <a class="navlink" href="{% url 'articles:page' next.id %}">&lt; Next Article</a>
+        {% else %}
+        <span class="navlink"></span>
+        {% endif %}
+        <span>{{article.created_at}}</span>
+        {% if prev %}
+        <a class="text-end navlink" href="{% url 'articles:page' prev.id %}">Next Article &gt;</a>
+        {% else %}
+        <span class="navlink"></span>
+        {% endif %}
+    </div>
 </div>
 <div class="container project-nutshell-container">
+    {% if request.user.is_authenticated %}
+    <div class="mb-3">
+        <a href="{% url 'articles:edit' article.id %}"><button class="btn btn-primary">Edit this page</button></a>
+    </div>
+    {% endif %}
     <h1>About this Article</h1>
     <div class="row">
         <div class="col-12 col-lg-8">
             <div>
                 <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab"
+                    <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab"
                             href="#tab-1">Motivation</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab"
                             href="#tab-2">Summary</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab"
                             href="#tab-4">Conclusion</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab"
+                    <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab"
                             href="#tab-3">Resources</a></li>
                 </ul>
                 <div class="tab-content consistent-height">
-                    <div class="tab-pane project-pane" role="tabpanel" id="tab-1">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consequat luctus nisl, a
-                            euismod magna imperdiet eget. Mauris a orci nunc. Aliquam erat volutpat. Donec elementum
-                            efficitur volutpat. Aenean scelerisque laoreet ligula, eget posuere est tristique ut.
-                            Curabitur pretium egestas metus non volutpat. Morbi mattis maximus tristique. Morbi eget
-                            sodales libero, ut placerat augue. Sed ut nisi ac purus egestas consectetur in sed nunc.
-                            Vivamus eu venenatis enim. Phasellus molestie at augue id finibus. Cras ac quam id dolor
-                            rutrum fringilla eget non odio. Aliquam erat volutpat. Nullam mattis id nunc sed
-                            fringilla.<br></p>
+                    <div class="tab-pane active project-pane" role="tabpanel" id="tab-1">
+                        <p>{{article.motivation_summary}}</p>
                     </div>
                     <div class="tab-pane project-pane" role="tabpanel" id="tab-2">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consequat luctus nisl, a
-                            euismod magna imperdiet eget. Mauris a orci nunc. Aliquam erat volutpat. Donec elementum
-                            efficitur volutpat. Aenean scelerisque laoreet ligula, eget posuere est tristique ut.
-                            Curabitur pretium egestas metus non volutpat. Morbi.<br></p>
+                        <p>{{article.article_summary}}</p>
                     </div>
-                    <div class="tab-pane" role="tabpanel" id="tab-4">
-                        <p>Tab content.</p>
+                    <div class="tab-pane project-pane" role="tabpanel" id="tab-4">
+                        <p>{{article.results_summary}}</p>
                     </div>
-                    <div class="tab-pane active project-pane" role="tabpanel" id="tab-3">
+                    <div class="tab-pane project-pane" role="tabpanel" id="tab-3">
                         <div class="d-flex justify-content-center align-items-center flex-wrap h-100">
-                            <div class="d-flex flex-column text-center mx-4"><a href="#"><i
+                            {% if article.dataset_url %}
+                            <div class="d-flex flex-column text-center mx-4"><a href="{{article.dataset_url}}"><i
                                         class="fab fa-kaggle icon-large"></i></a><span>Dataset</span></div>
-                            <div class="d-flex flex-column text-center mx-4"><a href="#"><i
+                            {% endif%}
+                            {% if article.repository_url %}
+                            <div class="d-flex flex-column text-center mx-4"><a href="{{article.repository_url}}"><i
                                         class="fa fa-github icon-large"></i></a><span>Repository</span></div>
-                            <div class="d-flex flex-column text-center mx-4"><a href="#"><i
+
+                            {% endif%}
+                            {% if article.download_link_url %}
+                            <div class="d-flex flex-column text-center mx-4"><a href="{{article.download_link_url}}"><i
                                         class="fa fa-download icon-large"></i></a><span>Download</span></div>
-                            <div class="d-flex flex-column text-center mx-4"><a href="#"><i
+
+                            {% endif%}
+                            {% if article.project_page_url %}
+                            <div class="d-flex flex-column text-center mx-4"><a href="{{article.project_page_url}}"><i
                                         class="fa fa-external-link icon-large"></i></a><span>Project Page</span></div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col mt-5">
-            <div class="d-flex flex-column justify-content-center align-items-center h-100">
+        <div class="col">
+            <div class="d-flex flex-column align-items-center h-100">
                 <h4>Tools used</h4>
                 <ul>
-                    <li>rvest Library (Text Scraping)</li>
-                    <li>Seeded LDA (Topic Discovery)</li>
-                    <li>Keyness (Text Metric)</li>
+                    {% for tool in toolstack %}
+                    <li>{{tool}}</li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
@@ -82,29 +102,8 @@
 </div>
 <div class="container mt-4">
     <h1>The Premise</h1>
-    <p>As video games have evolved as a medium over the past decades, so has their monetization. Over the last years,
-        the most prevalent change has been the introduction of “microtransactions” (short: MTX) – small purchases within
-        the game itself unlocking additional content or increasing the power level of the player character.<br><br>In
-        MMORPGs, a genre of video games which is mostly known for large, persistent worlds with thousands to millions of
-        concurrent players, MTX have been a point of contention for many years. Unlike in singleplayer games, the power
-        level of a few players can inadvertently affect the game balance for all other players, and can sometimes even
-        completely shift the economy of the world. Players thus often advocate for a “pay2win free” environment, where
-        “pay2win” (or p2w) refers to the ability to purchase tangible advantages within the game with real
-        money.<br><br>Interestingly, this sentiment is somewhat regional to Europe and North America. In Asia, on the
-        other hand, players are often much more accepting of such practices. This discrepancy was very clearly shown
-        this year in the summer launch of “Aion Classic” – a western relaunch of an MMORPG by Korean Developer and
-        Publisher NCSoft.<br></p>
+    <p>{{article.article_premise|safe}}</p>
     <h1>Article Text</h1>
-    <p>As a basis for this discussion, the same dataset which is provided on Kaggle is used, which covers posts between
-        the 9th of June and the 15th of July. However, you can re-run the scraping yourself using the R script provided
-        on GitHub to obtain more recent data. To first understand the general conversation on the forums scraped,
-        wordclouds and semantic networks can be used.<br><br>Wordclouds are likely something most data scientists will
-        be familiar with. They simply show words scaled by their frequency in the corpus (in this case, all posts in the
-        forums). We can use a wordcloud to get a general feel for the type of posts within the forums. The provided
-        wordcloud is corrected to remove stopwords (common english words such as “the”, “a”, “I”, etc.) – some trends
-        can already be seen in this picture. The main words discussing the game are of course present (“classic”,
-        “aion”, “game”), but other points of discussion can also be identified, such as “candies”, “subscription”,
-        “p2w”, “bots”…<br><br>One interesting note is the appearance of the words (“can”, “people”/”players”, “just”),
-        which could potentially be a phrase commonly used together. This will be inspected in a further step.<br></p>
+    <p>{{article.article_text|safe}}</p>
 </div>
 {% endblock %}
