Properly push out projects past the last four from the forms, add a form for creating a new recent project

--- a/vanilladev/home/templates/home/recentprojects.html
+++ b/vanilladev/home/templates/home/recentprojects.html
@@ -15,19 +15,31 @@
     <h1 class="text-center">Recent Project Management</h1>
 </div>
 <div class="container">
-    <p>On this page you can add a new "Recent Work" post for the home page, as well as edit the last four entries. 
-        Please keep in mind to only update one recent project at the time.</p>
+    <p>On this page you can add a new "Recent Work" post for the home page, as well as edit the last four entries.
+        Please keep in mind to only update one recent project at the time. If less than four current recent projects
+        exist, the new recent project will be added to the list. If four current recent projects already exist, the new
+        recent project will replace the project with the earliest creation date. </p>
+
+    <h2>Create new Recent Project</h2>
+    <form action="" method="post">
+        {% csrf_token %}
+        {% bootstrap_form new %}
+        <button type="submit" class="btn btn-primary">
+            Create new
+        </button>
+    </form>
+
     {% for form in recent %}
-        <h2>Recent Project</h2>
-        <form action="{% url 'home:recentprojects' form.0 %}" method="post">
-            {% csrf_token %}
-            {% bootstrap_form form.1 %}
-            {% buttons %}
-            <button type="submit" class="btn btn-primary">
-                Update
-            </button>
-            {% endbuttons %}
-        </form>
+    <h2>Recent Project {{forloop.counter}}</h2>
+    <form action="{% url 'home:recentprojects' form.0 %}" method="post">
+        {% csrf_token %}
+        {% bootstrap_form form.1 %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">
+            Update
+        </button>
+        {% endbuttons %}
+    </form>
     {% endfor %}
 </div>
 {% endblock %}
