--- a/vanilladev/home/templates/home/index.html
+++ b/vanilladev/home/templates/home/index.html
@@ -120,62 +120,19 @@
 <div class="container mt-5">
     <h1 class="text-center mb-4">Recent Work</h1>
     <div class="row">
+        {% for recent in recents %}
         <div class="col-lg-6 project-column">
-            <div class="d-flex flex-column justify-content-between h-100">
+            <div class="d-flex flex-column justify-content-between h-100 w-100">
                 <div>
                     <div class="d-flex justify-content-between">
-                        <h5>GPT-2 Subreddit Simulation</h5><span><strong>ARTICLE </strong><i
-                                class="fab fa-connectdevelop"></i></span>
+                        <h5>{{recent.title}}</h5><span><strong>{{recent.type|upper}} </strong><i
+                                class="{{recent.icon}}"></i></span>
                     </div>
-                    <p>This introductory article to GPT-2 lays the foundation for a future software project aiming to
-                        emulate the writing style of different Massively Multiplayer Online Role Playing Game
-                        Subreddits. It describes the transformer architecture used in GPT-2 on a very basic level, and
-                        shows the process of scraping data from reddit to use as training data for GPT-2.<br><br></p>
-                </div><a class="link-readmore" href="#">Read More &gt;</a>
+                    <p>{{recent.description}}</p>
+                </div><a class="link-readmore" href="{{recent.link}}">Read More &gt;</a>
             </div>
         </div>
-        <div class="col-lg-6 project-column">
-            <div class="d-flex flex-column justify-content-between h-100">
-                <div>
-                    <div class="d-flex justify-content-between">
-                        <h5>Vanilla Develop Website</h5><span><strong>PROJECT</strong> <i
-                                class="fab fa-chrome"></i></span>
-                    </div>
-                    <p>This website is currently being re-written from scratch using Django after alternatives such as
-                        Squarespace and WordPress proved to be too much of a nuisance to configure. When completed, the
-                        website will feature a CMS-style blog and project management and fully responsive design.<br>
-                    </p>
-                </div><a class="link-readmore" href="#">Read More &gt;</a>
-            </div>
-        </div>
-        <div class="col-lg-6 project-column">
-            <div class="d-flex flex-column justify-content-between h-100">
-                <div>
-                    <div class="d-flex justify-content-between">
-                        <h5>Rust Helper</h5><span><strong>SIDE</strong> <strong>PROJECT </strong><i
-                                class="fas fa-calculator"></i></span>
-                    </div>
-                    <p>A small GitHub hosted side-project which calculates and simulates certain game mechanics of
-                        the video game Rust. As it was my first attempt of using Vue, the code style is rather
-                        inconsistent, due to several techniques of data-flow (e.g. classic parent-child
-                        communication as well as using the VueX store for centralized state) being used.<br><br></p>
-                </div><a class="link-readmore" href="#">Read More &gt;</a>
-            </div>
-        </div>
-        <div class="col-lg-6 project-column">
-            <div class="d-flex flex-column justify-content-between h-100">
-                <div>
-                    <div class="d-flex justify-content-between">
-                        <h5>Aion Classic Sentiment Analysis</h5><span><strong>ARTICLE </strong><i
-                                class="fas fa-user-friends"></i></span>
-                    </div>
-                    <p>In the summer of 2021, the classic MMORPG Aion was re-released in the North American area. This
-                        version of the game featured the content available at its original launch, but introduced new
-                        microtransaction systems which upset the originally intended game design. This article explores
-                        the public response to this decision.</p>
-                </div><a class="link-readmore" href="#">Read More &gt;</a>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
 {%endblock %}
