Add extra top margin to feature cards on the side projects page

--- a/vanilladev/sideprojects/templates/sideprojects/index.html
+++ b/vanilladev/sideprojects/templates/sideprojects/index.html
@@ -16,7 +16,7 @@
         code style, or more precise details of the implementation either are not available anymore, or cannot be made
         available. These projects are grouped into three distinct categories and are showcased briefly on this page.</p>
     <div class="row row-cols-1 row-cols-lg-3">
-        <div class="col d-flex flex-column align-items-center feature"><i class="fas fa-suitcase feature_icon"
+        <div class="col d-flex flex-column align-items-center feature mt-4"><i class="fas fa-suitcase feature_icon"
                 id="feature_textanalysis"></i>
             <h5 class="mt-2">Professional Work</h5>
             <p>These are projects that I've worked on within the scope of university or in cooperation with companies,
@@ -24,7 +24,7 @@
                 implementation details of such projects closed source, I will do so anyway in order to prevent any
                 future potential complications.</p><button class="btn btn-primary" type="button">Show me more!</button>
         </div>
-        <div class="col d-flex flex-column align-items-center feature"><i class="fas fa-compress-alt feature_icon" 
+        <div class="col d-flex flex-column align-items-center feature mt-4"><i class="fas fa-compress-alt feature_icon" 
             id="feature_machinelearning"></i>
             <h5 class="mt-2">Side Projects</h5>
             <p>Side projects are projects with a relatively small scope and/or relatively messy code, due to being built
@@ -33,7 +33,7 @@
                 classify it as a side project, and list it here briefly.</p><button class="btn btn-primary"
                 type="button">Show me more!</button>
         </div>
-        <div class="col d-flex flex-column align-items-center feature"><i class="fas fa-gift feature_icon"
+        <div class="col d-flex flex-column align-items-center feature mt-4"><i class="fas fa-gift feature_icon"
                 id="feature_gamedev"></i>
             <h5 class="mt-2">The Treasure Trove</h5>
             <p>The Treasure Trove is a collection of projects that I have worked on in my teenage years. These projects
