Fix the header image css styling

--- a/vanilladev/vanilladev/assets/css/styles.css
+++ b/vanilladev/vanilladev/assets/css/styles.css
@@ -1,5 +1,5 @@
 #frontpage-header {
-  background: url("../../assets/img/pexels-nao-triponez-792199.jpg") center / cover no-repeat;
+  background: url("../img/pexels-nao-triponez-792199.jpg") center / cover no-repeat;
   height: 70vh;
   max-width: 2000px;
   margin: auto;
